<resources>
    <string name="app_name">Spender</string>
    <string name="ok">OK</string>
    <string name="close_page_btn">Close page</string>
    <string name="required_field">Required field</string>
    <string name="required_field_amount">Amount greater than 0</string>

    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="all">All</string>
    <string name="interval">Interval</string>
    <string name="specific_date">Date</string>
    <string name="button_custom_period">Button custom period</string>
    <string name="title_bottom_sheet_period">Selected period</string>

    <!-- Bottom Navigation Menu -->
    <string name="title_statistics_menu">Statistics</string>
    <string name="title_transaction_menu">Transactions</string>
    <string name="title_transfer_menu">Transfer</string>

    <string name="hello_text">Hello,</string>
    <string name="spender_text">Spender</string>
    <string name="name_first_account">Main accountBean</string>
    <string name="money_account">0</string>

    <string name="type_income">Income</string>
    <string name="type_expense">Expense</string>

    <!-- TransactionBean -->
    <string name="title_transactions">Last Transaction</string>
    <string name="see_all">See All</string>

    <!-- Bottom sheet accountBean -->
    <string name="account_bottom_sheet">Account</string>
    <string name="new_button_accounts">New accounts</string>
    <string name="content_description_radio_button">Selected</string>
    <string name="name_new_account_input">Account name</string>
    <string name="opening_balance_new_account_input">Account opening balance</string>
    <string name="save_button_account">Save account</string>

    <!-- Toast -->
    <string name="pressToExit">Press back again to exit</string>

    <!-- BEAN -->
    <string name="account_bean_master">All accounts</string>
    <string name="account_bean_main">Main</string>

    <string name="category_bean_open_balance">Account opening balance</string>
    <string name="category_bean_transfer">Transfer</string>
    <string name="category_bean_hobby">Hobby</string>
    <string name="category_bean_necessity">Necessity</string>

    <!-- Account -->
    <string name="new_account_included_balance">Included in the balance</string>
    <string name="new_account_choose_icon">Choose an icon:</string>
    <string name="saved_ok">Saved successfully</string>
    <string name="saved_ko">Error while saving</string>
    <string name="accounts">Accounts</string>
    <string name="alert_delete_account_title">Are you sure you want to delete this account?</string>
    <string name="alert_delete_account_text">Are you sure you want to cancel your account and all its operations?</string>
    <string name="title_page_new_account">New account</string>
    <string name="title_page_edit_account">Edit account</string>

    <string name="empty_list">Empty list</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_delete">Delete</string>
    <string name="delete_ok">Deletion was successful</string>
    <string name="delete_ko">The deletion was not successful</string>

    <string name="come_back">Come back</string>

    <string name="balance">Balance</string>

    <!-- Category -->
    <string name="new_button_category">New category</string>
    <string name="title_page_edit_category">Edit category</string>
    <string name="categories">Categories</string>
    <string name="name_new_category_input">Category name</string>
    <string name="alert_delete_category_title">Are you sure you want to delete this category?</string>

    <string name="category_icon">Category icon</string>

    <!-- Transaction -->
    <string name="title_page_new_transaction">New transaction</string>
    <string name="title_page_edit_transaction">Edit transaction</string>
    <string name="save_button_transaction">Save transaction</string>
    <string name="input_text_name_transaction">Name transaction</string>
    <string name="input_text_note_transaction">Note</string>
    <string name="choose_category">Choose a category</string>
    <string name="choose_account">Choose an account</string>
    <string name="save_transaction_ok">Transaction entered</string>
    <string name="save_transaction_ko">Error</string>
    <string name="title_page_detail_transaction">Transaction detail</string>
    <string name="date_title_detail_transaction">Date</string>
    <string name="time_title_detail_transaction">Time</string>
    <string name="type_title_detail_transaction">Type</string>
    <string name="account_title_detail_transaction">Account</string>
    <string name="category_title_detail_transaction">Category</string>
    <string name="note_title_detail_transaction">Note</string>
    <string name="amount_title_detail_transaction">Amount</string>
    <string name="title_page_list_transaction">Transactions</string>
    <string name="alert_delete_transaction_title">Are you sure you want to delete this transaction?</string>
    <string name="search_activity_button_type">Type</string>
    <string name="search_activity_button_date">Date</string>
    <string name="search_activity_button_category">Category</string>
    <string name="search_activity_button_account">Account</string>
    <string name="search_title_type">Filter by type</string>
    <string name="search_title_date">Filter by date</string>
    <string name="search_title_category">Filter by category</string>
    <string name="search_title_account">Filter by account</string>
    <string name="search_filter_date_start">Start</string>
    <string name="search_filter_date_end">End</string>

    <!-- TRANSFER -->
    <string name="title_page_new_transfer">New transfer</string>
    <string name="title_page_edit_transfer">Edit transfer</string>
    <string name="save_button_transfer">Save transfer</string>
    <string name="transfer_from">Transfer from</string>
    <string name="transfer_to">Transfer to</string>
    <string name="transfer_error_equal_account">The accounts must be different</string>
    <string name="transfer_from_short">From</string>
    <string name="transfer_to_short">To</string>
    <string name="transfer_save_ok">Transfer executed</string>
    <string name="transfer_count_account_problem">Create at least two accounts</string>
    <string name="amount_transfer_title">Transfer amount</string>

    <!-- SETTINGS -->
    <string name="title_page_settings">Settings</string>
    <string name="settings_page_icon_reminder">Icon reminder</string>
    <string name="settings_page_title_reminder">Reminder</string>
    <string name="settings_page_icon_theme">Icon theme</string>
    <string name="settings_page_title_theme">Theme</string>
    <string name="settings_page_theme_light">Light</string>
    <string name="settings_page_theme_dark">Dark</string>
    <string name="settings_page_theme_system_default">System default</string>
    <string name="settings_page_icon_currency">Icon currency</string>
    <string name="settings_page_title_currency">Currency</string>
    <string name="settings_page_title_currency_selected_off">Off</string>
    <string name="settings_theme_title_bs">Choose theme</string>

</resources>