<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/alert_background"
    android:padding="20dp">
    <TextView
        android:id="@+id/textAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:layout_centerInParent="true"
        android:textColor="@color/primary_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/alert_delete_account_text"
        android:textStyle="normal"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAlert">
        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_cancel"
            android:layout_margin="20dp"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/secondary_text"
            android:background="?attr/selectableItemBackgroundBorderless"/>
        <TextView
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_delete"
            android:layout_margin="20dp"
            android:textColor="@color/secondary"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>