<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manager.NewEditAccountActivity"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/linearToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/returnNewEditAccount"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/background"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow_back"
                    android:tint="@color/secondary_text"
                    android:hint="@string/come_back"
                    app:iconGravity="textStart"
                    android:layout_margin="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <TextView
        android:id="@+id/titlePageNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_page_new_account"
        android:hint="@string/title_page_new_account"
        android:textColor="@color/primary_text"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/linearToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="25sp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnDeleteAccount"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/secondary"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/alert_delete"
        app:layout_constraintBottom_toTopOf="@+id/containerForm"
        app:layout_constraintStart_toEndOf="@+id/titlePageNewAccount"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:layout_marginBottom="-20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete"
                android:tint="@color/background" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerForm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlePageNewAccount"
        app:layout_constraintBottom_toTopOf="@+id/linear"
        android:background="@drawable/list_accounts_background"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:layout_marginTop="20dp">

            <EditText
                    android:id="@+id/accountName"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:ems="10"
                    android:hint="@string/name_new_account_input"
                    android:autofillHints="name"
                    android:textSize="14sp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/custom_ic_edit"
                    android:drawablePadding="12dp"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"/>

            <it.bonny.app.wisespender.util.CurrencyEditText
                android:id="@+id/accountOpeningBalance"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:autofillHints="name"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_ic_euro_symbol"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/opening_balance_new_account_input"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                android:imeOptions="actionDone"
                app:layout_constraintEnd_toEndOf="@+id/accountName"
                app:layout_constraintStart_toStartOf="@+id/accountName"
                app:layout_constraintTop_toBottomOf="@+id/accountName"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/linearSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/accountOpeningBalance"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_account_included_balance"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/flag_view_total_balance"
                        app:layout_constraintBottom_toBottomOf="@+id/flag_view_total_balance"
                        android:textColor="@color/primary_text"/>
                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/flag_view_total_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                    android:id="@+id/linearIcon"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearSwitch"
                    app:layout_constraintStart_toStartOf="@+id/linearSwitch"
                    app:layout_constraintEnd_toEndOf="@+id/linearSwitch"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/titleChooseIconNewAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:text="@string/new_account_choose_icon"
                        android:layout_marginBottom="10dp"/>
                    <GridView
                        android:id="@+id/gridViewNewAccount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:columnWidth="90dp"
                        android:numColumns="auto_fit"
                        android:verticalSpacing="10dp"
                        android:horizontalSpacing="10dp"
                        android:stretchMode="spacingWidthUniform"
                        android:gravity="center"/>
                </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/background_card"
        android:elevation="0dp"
        android:orientation="vertical">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSaveNewAccount"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/save_button_account"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="16sp"
            android:gravity="center"
            app:background="@color/primary"
            android:contentDescription="@string/save_button_account"
            android:layout_margin="16dp"
            app:cornerRadius="10dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>