<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp">
    <View
        android:id="@+id/lineBottomSheetTitle"
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/sheet_line_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/titleBottomSheetAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:text="@string/search_title_type"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lineBottomSheetTitle"
        app:layout_constraintEnd_toEndOf="@+id/lineBottomSheetTitle"
        app:layout_constraintTop_toBottomOf="@+id/lineBottomSheetTitle"
        />
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/secondary_text"
        app:layout_constraintTop_toBottomOf="@+id/titleBottomSheetAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintBottom_toTopOf="@+id/containerExpense"
        android:minHeight="48dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:checked="true"/>
        <TextView
            android:id="@+id/textViewIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_income"
            app:layout_constraintTop_toTopOf="@+id/checkBoxIncome"
            app:layout_constraintBottom_toBottomOf="@+id/checkBoxIncome"
            app:layout_constraintStart_toEndOf="@+id/checkBoxIncome"
            android:layout_marginStart="5dp"
            android:textColor="@color/primary_text"
            android:textSize="18sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerIncome"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        android:minHeight="48dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:checked="true"/>
        <TextView
            android:id="@+id/textViewExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_expense"
            app:layout_constraintTop_toTopOf="@+id/checkBoxExpense"
            app:layout_constraintBottom_toBottomOf="@+id/checkBoxExpense"
            app:layout_constraintStart_toEndOf="@+id/checkBoxExpense"
            android:layout_marginStart="5dp"
            android:textColor="@color/primary_text"
            android:textSize="18sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/secondary_text"
        app:layout_constraintBottom_toTopOf="@+id/container_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnOk"
            android:textColor="@color/primary_text"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            app:layout_constraintTop_toTopOf="@+id/btnCancel"
            app:layout_constraintBottom_toBottomOf="@+id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>