<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">
    <View
        android:id="@+id/lineBottomSheetTitle"
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/sheet_line_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerTypeCategory"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:startIconDrawable="@drawable/ic_edit"
        app:counterMaxLength="3"
        app:counterEnabled="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text">
        <EditText
            android:id="@+id/currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:hint="@string/settings_page_title_currency"
            android:textColor="@color/primary_text"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:autofillHints="name"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerEnd"
        android:layout_marginTop="8dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/alert_cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnOk"
            android:textColor="@color/primary_text"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginStart="16dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:textColor="@color/text_button"
            android:text="@string/ok"
            android:textSize="16sp"
            android:gravity="center"
            android:backgroundTint="@color/primary"
            app:elevation="0dp"
            android:contentDescription="@string/ok"
            app:layout_constraintTop_toTopOf="@+id/btnCancel"
            app:layout_constraintBottom_toBottomOf="@+id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            android:layout_margin="16dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="22dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>